--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ disqus_shortname:   taylantatli
 #email:
 #twitter:
 #facebook:           
-github-url:         https://github.com/20-2-SKKU-OSS/2020-2-OSS-1.git
+github-url:         20-2-SKKU-OSS/2020-2-OSS-1.git
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:          username
 #xing:              username
